<resources>

    <string name="app_name">Life Changer</string>
    <string name="home">LifeChanger</string>

    <string name="categoryTitleClimate">Klima</string>
    <string name="categoryTitleWater">Gewässer</string>
    <string name="categoryTitleGarbage">Müll</string>
    <string name="categoryTitleDisaster">Katastrophen</string>
    <string name="categoryTitleAnimalRights">Tierschutz</string>
    <string name="categoryTitleSpeciesProtection">Artenschutz</string>
    <string name="categoryTitleCats">Katzen</string>
    <string name="categoryTitleDogs">Hunde</string>
    <string name="categoryTitleHorses">Pferde</string>
    <string name="categoryTitleKids">Kinder</string>
    <string name="categoryTitleSeniors">Senioren</string>
    <string name="categoryTitleHomeless">Obdachlose</string>
    <string name="categoryTitleRefugees">Flüchtlinge</string>
    <string name="categoryTitleInclusion">Inklusion</string>
    <string name="categoryTitleEducation">Bildung</string>
    <string name="categoryTitleInfrastructure">Infrastruktur</string>

    <string name="categoryTitleEnvironment">Umwelt</string>
    <string name="categoryTitleAnimal">Tiere</string>
    <string name="categoryTitlePeople">Menschen</string>
    <string name="categoryTitleDevelopmentAid">Entwicklungshilfe</string>

    <string name="favorites">Favoriten</string>
    <string name="payment">Bezahlung</string>
    <string name="settings">Einstellungen</string>
    <string name="search">Suche</string>
    <string name="paypalCheck">Daten überprüfen</string>
    <string name="thankyou">Dankeschön</string>
    <string name="thankyouText">Ihre Spende ist ein echter Segen und bringt uns unserem Ziel näher. Mit Ihrer großzügigen Unterstützung können wir weiterhin Positives bewirken und Veränderungen schaffen. Ihr Beitrag ist mehr als nur eine finanzielle Hilfe; er ist ein Ausdruck von Solidarität und Glauben an unsere Mission. Vielen herzlichen Dank für Ihr Vertrauen in unsere Arbeit. Gemeinsam können wir die Welt zu einem besseren Ort machen!</string>
    <string name="backToHome">Zurück zum Home Screen</string>

    <string name="shareText">Schau dir diese Spendenaktion an:</string>
    <string name="addDonation">Spendenaktion erstellen</string>
    <string name="editDonation">Spendenaktion bearbeiten</string>
    <string name="addCategory">Kategorie</string>
    <string name="addTitle">Titel</string>
    <string name="addDescription">Projektbeschreibung</string>
    <string name="addCreator">Initiator/-in</string>
    <string name="uploadImage">Bild auswählen</string>
    <string name="addAccountInfo">PayPal-Adresse</string>
    <string name="searchHint">Suchbegriff eingeben</string>
    <string name="darkMode">Dunkel Modus</string>
    <string name="language">Sprache auf Englisch umstellen</string>

    <string name="successTitleAdding">Gratulation!</string>
    <string name="successMessageAdding">Deine Spendenaktion wurde erfolgreich erstellt!</string>
    <string name="errorMessageAdding">Bitte fülle alle Felder aus!</string>
    <string name="errorMessagePayment">Bitte gib einen Betrag ein!</string>
    <string name="errorMessageEmail">Keine E-Mail App gefunden.</string>
    <string name="errorMessageCofiguration">Ein Fehler ist aufgetreten, bitte versuche es erneut.</string>

    <string name="donateTo">Du spendest an:</string>
    <string name="addAmount">Spendensumme</string>
    <string name="PayPal">Daten prüfen</string>
    <string name="close">Schließen</string>
    <string name="noSearchResults">Keine passenden Spenden gefunden.</string>
    <string name="aboutApp">Über die App</string>
    <string name="languageInfo">Bitte beachte, dass die Spendentexte maschinell auf English übersetzt werden. Für die Richtigkeit übernehmen wir keine Garantie.</string>
    <string name="feedback">Feedback E-MAil senden</string>

    <string name="about">LifeChanger ist mehr als nur eine mobile App - es ist eine Plattform für positive Veränderung!\nUnsere Vision ist es, Menschen, die etwas bewirken möchten, mit wirkungsvollen wohltätigen Zwecken zu verbinden. Ganz gleich, ob du dich für Umweltschutz, humanitäre Hilfe, Bildung oder einen anderen edlen Zweck begeisterst, LifeChanger steht dir zur Seite.\n\nWir stellen uns eine Welt vor, in der jede kleine Handlung zu bedeutenden Veränderungen führen kann. LifeChanger entstand aus der Idee, dass jede Spende das Potenzial hat, Leben und Gemeinschaften zu verändern. Wir sind entschlossen, einen Raum zu schaffen, in dem Veränderungsmacher wie ihr zusammen kommt, eure Geschichten teilt und die euch am meisten am Herzen liegenden Anliegen unterstützen könnt.\n\nErforsche eine vielfältige Palette von Spenden und Wohltätigkeitsorganisationen. Finde die Zwecke, die mit deinen Werten in Einklang stehen, und leiste deine Unterstützung.\n\nDu hast ein eigenes Spendenprojekt oder eine Sache, die dir besonders am Herzen liegt? Nutze LifeChanger, um eigene Spendenkampagnen zu erstellen und zu teilen.\n\nSchließ dich der Bewegung an. Indem du unsere App heruntergeladen hast, bist du Teil einer weltweiten Bewegung geworden. Setze dich für das ein, was dir wichtig ist, und zeige der Welt, dass positive Veränderung bei dir beginnt. Deine Handlungen haben das Potenzial, eine bessere Zukunft für alle zu schaffen.\n\nVielen Dank, dass du LifeChanger gewählt hast, die App, die an die transformative Kraft jeder Spende glaubt.\n\n<b>Gemeinsam können wir die Welt verändern - mit jeder guten Tat.</b></string>

    <string-array name="donation_categories">
        <item>Klima</item>
        <item>Gewässer</item>
        <item>Müll</item>
        <item>Katastrophen</item>
        <item>Tierschutz</item>
        <item>Artenschutz</item>
        <item>Katzen</item>
        <item>Hunde</item>
        <item>Pferde</item>
        <item>Kinder</item>
        <item>Senioren</item>
        <item>Obdachlose</item>
        <item>Flüchtlinge</item>
        <item>Inklusion</item>
        <item>Bildung</item>
        <item>Infrastruktur</item>
    </string-array>

</resources>
