<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AddDonationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/addDonationCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:paddingTop="20dp"
            android:paddingEnd="8dp"
            android:paddingBottom="20dp"
            android:paddingStart="8dp"
            android:dropDownVerticalOffset="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/spinner_background"
            android:entries="@array/donation_categories" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addDonationTitleTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            app:boxStrokeColor="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDonationCategorySpinner">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addTitle"
                android:id="@+id/addDonationTitleTI" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addDonationDescriptionTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            app:boxStrokeColor="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDonationTitleTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addDescription"
                android:id="@+id/addDonationDescriptionTI" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addDonationCreatorTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            app:boxStrokeColor="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDonationDescriptionTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addCreator"
                android:id="@+id/addDonationCreatorTI" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addDonationImageTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            app:boxStrokeColor="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDonationCreatorTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addImage"
                android:id="@+id/addDonationImageTI" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addAccountInfoTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            app:boxStrokeColor="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDonationImageTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addAccountInfo"
                android:id="@+id/addAccountInfo" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancelBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/ubuntu"
            android:padding="16dp"
            android:text="Cancel"
            android:textColor="@color/black"
            app:backgroundTint="@color/third"
            app:layout_constraintEnd_toStartOf="@+id/addBTN"
            app:layout_constraintStart_toStartOf="@+id/addAccountInfoTIL"
            app:layout_constraintTop_toBottomOf="@+id/addAccountInfoTIL" />

        <Button
            android:id="@+id/addBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/ubuntu"
            android:padding="16dp"
            android:text="@string/addDonation"
            android:textColor="@color/white"
            app:backgroundTint="@color/second"
            app:layout_constraintEnd_toEndOf="@+id/addAccountInfoTIL"
            app:layout_constraintTop_toBottomOf="@+id/addAccountInfoTIL" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
