<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddDonationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/donateToTV"
                style="@style/CopyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/donateTo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/creatorPaymentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Initiator/in"
                android:textAppearance="@style/HeadingMainText"
                android:textColor="@color/main"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/donateToTV" />

            <TextView
                android:id="@+id/titlePaymentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Titel"
                android:textAppearance="@style/HeadingMainText"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/creatorPaymentTV" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addAmountTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:textSize="18sp"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                app:boxStrokeColor="@color/main"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titlePaymentTV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addAccountInfoTI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/addAmount"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/paypalBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/ubuntu"
                android:text="@string/PayPal"
                android:textColor="@color/icon"
                app:backgroundTint="@color/second"
                app:layout_constraintStart_toStartOf="@+id/addAmountTIL"
                app:layout_constraintTop_toBottomOf="@+id/addAmountTIL" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelPaymentFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:src="@drawable/cancel_icon"
        app:backgroundTint="@color/second"
        app:maxImageSize="40dp"
        app:tint="@color/icon"
        android:focusable="true" />

</FrameLayout>